# Artificial-Life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  gtest-install.sh  run.sh  runtests.sh
ArtificialLife/: ArtificialLife.sln
ArtificialLife/ArtificialLife/: Animal.cpp  ArtificialLife.vcxproj  ArtificialLife.vcxproj.filters  Movement.h  Plant.h  Simulation.h  Trait.h
ArtificialLife/Tests/: MapTests.cpp  Tests.vcxproj
apt-install/: gtest-install.sh  sdl2-install.sh  sdl2-ttf-install.sh
src/: Animal.cc  Animal.cpp  Animal.h  Button.h  CMakeLists.txt  Camera.cc  Camera.h  Carnivore.h  Clickable.h  Colors.h  Controls.cc  Controls.cpp  Controls.h  Drawable.cc  Drawable.cpp  Drawable.h  EmptyRect.h  FilledRect.h  Font.h  Herbivore.h  Map.cc  Map.cpp  Map.h  MapObject.cc  MapObject.h  Menu.cc  Menu.h  Movement.cc  Movement.h  MovementCarnivore.cc  MovementCarnivore.h  MovementHerbivore.cc  MovementHerbivore.h  Plant.cc  Plant.h  PointBase.hpp  Random.h  Settings.cc  Settings.h  Shape.h  (+24 more)
test/: CMakeLists.txt  FixtureBasePointTests.h  FixtureMapTests.h  MapObjectDummy.h  MapTests.cc  MapTests.cpp  PointBaseTests.cc  PointBaseTests.cpp  basePointTests.cpp  baseSizeTests.cpp  test.cpp
third party/SDL/: CMakeLists.txt
third party/SDL_ttf/: CMakeLists.txt
