cmake_minimum_required(VERSION 3.16)
project(AL-dist)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

option(BUILD_TEST "Buduje testy jednostkowe" ON)
option(BUILD_DEPENDENCIES "Buduje zaleznosci zewnetrzne" OFF)

if (BUILD_DEPENDENCIES)
    add_subdirectory("third party/SDL")
    add_subdirectory("third party/SDL_ttf")
endif()
add_subdirectory(src)

if (BUILD_TEST)
    if (BUILD_DEPENDENCIES)
        add_subdirectory("third party/googletest")
    endif()
    add_subdirectory(test)
endif()
